fixed z-index conflict

--- a/client/src/entities/faculty/faculty-heading/style.module.scss
+++ b/client/src/entities/faculty/faculty-heading/style.module.scss
@@ -7,7 +7,6 @@
     padding: 0 2rem 0;
     background: $accentColor;
     height: 5rem;
-    position: relative;
     border-radius: 0.5rem;
   }
 
